# documents

./: .gitignore  README  README.org  lecture26-notes.org
Activities/: Readme.md  lightning-round.py  lightning-round.r
Activities/best-practices/: shift-the-mean-1.r  shift-the-mean-2.r  shift-the-mean-3-script.r  shift-the-mean-3.r
Activities/cows/: cow-data1.txt  cow-data2.txt  cow-data3.txt  cows.py  cows1.py  folds.py  state_machine.py
Activities/crime-data/: crime-base.csv  crime-week-1-patch.csv  crime-week-1.csv  crime-week-2-patch.csv  crime-week-2.csv  crime-week-3-patch.csv  crime-week-3.csv  crime-week-4-patch.csv  crime-week-4.csv  police-neighborhoods.csv  specification
Activities/debugging/: debug1.py  debug1.r
Activities/dp/: fib.py  fib.r
Activities/dynamic-programming/: change.py
Activities/errors-assertions/: naughty-user.r  shift-the-mean.r
Activities/graph-traversal/: NodeStore.py  TraversalState.py  print-history.py  thistory.py  traversal.py  traverse.py
Activities/parsing/: .flake8  README  combinators-stubs.py  combinators.py  combinators.r  hints  parse_quotes.r  parse_regexp.py  parse_regexp.r  parse_regexp_rich.py  parse_regexp_rich.r  parse_state_machine.py  test_combinators.py  test_combinators.r  test_regexp_rich.py
Activities/profiling/: example.R  hw4-poisson.R  poisLogBarrier.RData  profiling-example.R
Activities/proof-assistants/: add2.py  add2.r
Activities/sql/: commands-1.sql  commands-2.sql  commands-3.sql  events.csv  events.sql  lec20-ex.org  movies-data.sql  rdata.csv
Activities/state-machines/: .flake8  bounded_queue.py  cows.py  cows0.py  state_machine.py  stub-class.py  stub-class.r
Activities/union-find/: EagerObjectSets.py  EagerObjectSets.r  FastObjectSets.py  FastObjectSets.r  LazyObjectSets.py  LazyObjectSets.r  Task
ClassFiles/week1/: setup-profile.py  vscode-settings.txt
ClassFiles/week2/: README  nnk.py  nnk.r  shift-the-mean-3-script.r
ClassFiles/week4/: Graph.py  print-history.py  thistory.py
ClassFiles/week5/: change
ClassFiles/week6/: Graph.py  PriorityQueue.py  TraversalState.py  edit-fix.py  edit-fix.r  print-history.py  thist-examp.gv
ClassFiles/week7/: commands-R.r  commands.sql
ClassFiles/week8/: activities.org  pycommands.py  rcommands.R
ClassFiles/week9/: instructions
ClassFiles/weekA/: activity-solutions.sql  commands-3.py  commands-3.r  commands-3.sql
ClassFiles/weekB/: sudoku-grid-util.R  sudoku-grid.R  sudoku_grid.py  sudoku_grid_util.py
Info/: assignment-repo-update.org  entry-point-exercises  git-setup.org  programming-languages.org  python-packaging.org  system-setup.org  text-editors.org  windows-path.org
LectureNotes/: lec11-39.py  lec11.py  lecture12.org  lecture24-notes.org  lecture24.org  lecture25-notes.org  lecture25.org  lecture26.org
Lectures/: week1R.org  week1T.org  week2R.org  week2T.org  week3R.org  week3T.org  week5R.org  week6R.org  week6T.org  week7R.org  week8T.org  week9R.org  week9T.org  weekAR-II.org  weekAR.org  weekAT.org  weekBT.org  weekCR.org  weekCT.org  weekDT.org  weekET.org  weekFR.org  weekFT.org
Src/: .flake8
Src/dominoes/haskell/dominoes/: .gitignore  CHANGELOG.md  dominoes.cabal  test1.txt  test2.txt  tests.txt
Src/dominoes/haskell/dominoes/app/: DominoPool.hs  InputParser.hs  Objectives.hs  SearchTree.hs  SearchTreeExt.hs  dominoes.hs
Src/dominoes/haskell/dominoes/test/: DominoesSpec.hs  Spec.hs
Src/fp-concepts/: .dir-locals.el  .gitignore  pyproject.toml
Src/fp-concepts/.save/: fpc_examps.py
Src/fp-concepts/src/fp_concepts/: Alternative.py  Applicative.py  Backwards.py  Bicofunctor.py  Bicovariant.py  Bifunctor.py  Bitraversable.py  CoFunctor.py  Const.py  Dict.py  Either.py  Foldable.py  Functor.py  Identity.py  List.py  Maybe.py  Monad.py  Monoids.py  NTuple.py  Pair.py  Profunctor.py  Reader.py  Set.py  State.py  Traversable.py  Trees.py  Unit.py  Writer.py  __about__.py  __init__.py  all.py  functions.py  ops.py  optics.py  utils.py  wrappers.py
Src/fp-concepts/src/fp_concepts/examples/: divide_conquer.py  huffman.py
Src/fp-concepts/src/fp_concepts/optics/: AffineFold.py  Choice.py  Cochoice.py  Costrong.py  Fold.py  Getter.py  Lens.py  Optic.py  Prism.py  Review.py  Setter.py  Strong.py  __init__.py  all.py  combinators.py  generics.py  profunctors.py
Src/fp-concepts/src/fp_concepts/optics/deprecated/: Cartesian.py  Forget.py  Star.py
Src/fp-concepts/src/fp_concepts/pf_optics/: Forget.py  __init__.py  all.py
Src/fp-concepts/tests/: test_examples.py
Topics/: assertions.org  backtracking.org  cython.org  data-structures.org  debugging.org  divide-conquer.org  errors-exceptions.org  functional-programming.org  interpreters-compilers.org  object-oriented.org  profiling.org  rcpp.org  reticulate.org  rpy2.org  unit-testing.org  version-control.org
(+152 files in other folders)
