cabal-version:      2.4
name:               dominoes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christopher R. Genovese
maintainer:         genovese@cmu.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable dominoes
    hs-source-dirs:   app
    main-is:          dominoes.hs
    other-modules:
        DominoPool
        InputParser
        SearchTree
        Objectives
    build-depends:
        base ^>=4.14.3.0
      , text-conversions ^>=0.3.1.1
      , text ^>=1.2.4.1
      , containers ^>=0.6.5.1
      , megaparsec ^>=9.2.1
      , parser-combinators ^>= 1.3.0
      , optparse-applicative ^>=0.17.0.0
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        ConstraintKinds
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeOperators
        TypeApplications
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

test-suite dominoes-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test, app
    main-is:             Spec.hs
    build-depends:       base
                       , hspec
                       , QuickCheck
    default-language:    Haskell2010
    ghc-options:         -Wall
                         -Wcompat
                         -Widentities
                         -Wincomplete-record-updates
                         -Wincomplete-uni-patterns
                         -Wmissing-export-lists
                         -Wmissing-home-modules
                         -Wpartial-fields
                         -Wredundant-constraints
                         -threaded
                         -rtsopts
                         -with-rtsopts=-N